# maxidom

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: api.py  database.py  feature_extraction.py  models.py  regen.MD  regenerate_features.py  run_test.py  security.py  test_api.py  utils.py
backend/app/api/: test_api.py
docs/: 01_PROJECT_OVERVIEW.md  02_QUICK_START_GUIDE.md  03_SYSTEM_ARCHITECTURE.md  04_API_CONTRACT.md  05_DATA_PIPELINE.md  06_FRONTEND_CHROME_EXTENSION.md  07_BACKEND_FASTAPI.md  08_ML_MODEL_LIFECYCLE.md  09_DEPLOYMENT.md
extension/: manifest.json  onboarding.html  onboarding.js  popup.html  popup.js  service-worker.js
extension/frontend/: index.html  package-lock.json  package.json  vite.config.ts
extension/frontend/src/: App.tsx  global.d.ts  index.css
extension/frontend/src/components/: Navbar.tsx
extension/frontend/src/css/: DetectionPhase.module.css  MainPage.css  MainPage.module.css  Onboarding.module.css  PasswordMngmt.module.css  PopupPage.module.css  TrainingPhase.module.css
extension/frontend/src/pages/: ChangePassword.tsx  DetectionPhase.tsx  MainPage.tsx  ManageSettings.tsx  Onboarding.tsx  PopupPage.tsx  ResetProfile.tsx  ResetPrompt.tsx  TrainingPhase.tsx
extension/popups/: popup.html  popup.js
extension/scripts/: overlay.js  script.js
extension/utils/: helpers.js  uuid.js
